--- a/analytics/workflows/1_mappings/site.yaml
+++ b/analytics/workflows/1_mappings/site.yaml
@@ -1,81 +1,30 @@
 meta:
-  Type: Mapped
-  ID: SITE
-  Description: SITE Data Mapping 
-  Priority: 3
+  Type: mapped
+  ID: site
+  Description: Site Data Mapping 
+  Priority: 2
 spec:
-  Raw_SITE:
-    studyid:
+  mapped_dm:
+    SITEID:
       type: character
-      source_col: protocol 
-    invid:
+    SUBJID:
       type: character
-      source_col: pi_number
-    InvestigatorFirstName:
-      type: character
-      source_col: pi_first_name
-    InvestigatorLastName:
-      type: character
-      source_col: pi_last_name
-    Status:
-      type: character
-      source_col: site_status
-    City:
-      type: character
-      source_col: city
-    State:
-      type: character
-      source_col: state
-    Country:
-      type: character
-      source_col: country
-  Mapped_SUBJ:
-    studyid:
-      type: character
-    invid:
-      type: character
-    subjid:
-      type: character
-    Status:
-      type: character
+    timeonstudy:
+      type: numeric
 steps:
-  - output: Temp_CTMSSiteWide
+  - output: ParticipantCounts
     name: RunQuery
     params:
-      df: Raw_SITE
-      strQuery: "SELECT invid as GroupID, * FROM df"
-  - output: Temp_CTMSSite
-    name: MakeLongMeta
-    params:
-      data: Temp_CTMSSiteWide
-      strGroupLevel: 'Site'
-  - output: Temp_SiteCountsWide
-    name: RunQuery
-    params:
-      df: Mapped_SUBJ
+      df: mapped_dm
       strQuery: |
         SELECT
-          invid as GroupID,
-          COUNT(DISTINCT subjid) as ParticipantCount,
-          SUM(CASE WHEN Status == 'Active' THEN 1 ELSE 0 END) as ActiveParticipantCount,
-          COUNT(DISTINCT invid) as SiteCount
+          SITEID as GroupID,
+          COUNT(DISTINCT SUBJID) as ParticipantCount
         FROM df
-        GROUP BY invid
-  - output: Temp_SiteCountsWide_ActiveParticipants
-    name: CalculatePercentage
-    params:
-      data: Temp_SiteCountsWide
-      strCurrentCol: ActiveParticipantCount
-      strTargetCol: ParticipantCount
-      strPercVal: PercentParticipantsActive
-      strPercStrVal: ActiveParticipants
-  - output: Temp_SiteCounts
+        GROUP BY SITEID
+  - output: mapped_site
     name: MakeLongMeta
     params:
-      data: Temp_SiteCountsWide_ActiveParticipants
+      data: ParticipantCounts
       strGroupLevel: "Site"
-  - output: Mapped_SITE
-    name: bind_rows
-    params:
-      Temp_CTMSSite: Temp_CTMSSite
-      Temp_SiteCounts: Temp_SiteCounts
+
