--- a/analytics/workflows/2_metrics/adverseEventReportingRate.yaml
+++ b/analytics/workflows/2_metrics/adverseEventReportingRate.yaml
@@ -1,6 +1,7 @@
 meta:
   Type: Analysis
   ID: adverseEventReportingRate
+  Description: Adverse Event Rate KRI
   GroupLevel: Site
   Abbreviation: AE
   Metric: Adverse Event Rate
