--- a/analytics/workflows/2_metrics/labAbnormalityRate.yaml
+++ b/analytics/workflows/2_metrics/labAbnormalityRate.yaml
@@ -1,6 +1,7 @@
 meta:
   Type: Analysis
   ID: labAbnormalityRate
+  Description: Lab Abnormality Rate KRI
   GroupLevel: Site
   Abbreviation: LB
   Metric: Lab Abnormality Rate
