--- a/analytics/workflows/2_metrics/studyDiscontinuationRate.yaml
+++ b/analytics/workflows/2_metrics/studyDiscontinuationRate.yaml
@@ -1,6 +1,7 @@
 meta:
   Type: Analysis
   ID: studyDiscontinuationRate
+  Description: Study Discontinuation Rate KRI
   GroupLevel: Site
   Abbreviation: SDSC
   Metric: Study Discontinuation Rate
