--- a/analytics/workflows/3_reporting/Bounds.yaml
+++ b/analytics/workflows/3_reporting/Bounds.yaml
@@ -1,7 +1,7 @@
 meta:
   Type: Reporting
   ID: Bounds
-  Description: Generate reporting data model including site-, country- and study-level metadata (dfGroups), metric metadata (dfMetrics) and results data with added study-level columsn (dfSummary and dfBounds).
+  Description: Annotation Data for Scatter Plot
   Priority: 2
 spec:
   Reporting_Results:
