--- a/analytics/workflows/3_reporting/Metrics.yaml
+++ b/analytics/workflows/3_reporting/Metrics.yaml
@@ -1,12 +1,12 @@
 meta:
   Type: Reporting
   ID: Metrics
-  Description: Reporting Metrics Data
+  Description: Analysis Metadata
   Priority: 1
 steps:
   # lWorkflows is a named list of metric workflows.
   - output: Reporting_Metrics
     name: MakeMetric
     params:
-      lWorkflows: lWorkflows
+      lWorkflows: lAnalysisWorkflows
 
