--- a/analytics/workflows/1_mappings/ds.yaml
+++ b/analytics/workflows/1_mappings/ds.yaml
@@ -4,16 +4,18 @@ meta:
   Description: Disposition
   Priority: 1
 spec: 
-  ds:
+  SDTM_DS:
     USUBJID:
+      type: character
+    DSCAT:
       type: character
     DSDECOD:
       type: character
 steps:
-  - output: mapped_ds
+  - output: Mapped_DS
     name: RunQuery
     params:
-      df: ds
+      df: SDTM_DS
       strQuery: |
         SELECT *
         FROM df
