--- a/workflows/1_mappings/ae.yaml
+++ b/workflows/1_mappings/ae.yaml
@@ -17,16 +17,34 @@ spec:
       type: character
     AESEQ:
       type: character
-    AEDECOD:
+    # Columns required by {gsm.ae} plugin:
+    mdrpt_nsv:
       type: character
-    AEBODSYS:
+      source_col: AEDECOD
+    mdrsoc_nsv:
       type: character
-    AESER:
+      source_col: AEBODSYS
+    aeser:
       type: character
-    AESEV:
+      source_col: AESER
+    aetoxgr:
       type: character
+      source_col: AESEV
+    aerel:
+      type: character
+      source_col: AEREL
+    aeout:
+      type: character
+      source_col: AEOUT
+    aeacn:
+      type: character
+      source_col: AEACN
 steps:
-  # Add columns required by {gsm.ae} plugin.
+  # Clean adverse event data:
+  # - Create SITEID column from USUBJID.
+  # - Convert AE start and end date from character values to dates. For incomplete date values, set
+  #   to missing.
+  # - Add columns required by {gsm.ae} plugin: aest_dt and aeen_dt.
   - output: Mapped_AE
     name: RunQuery
     params:
@@ -34,11 +52,15 @@ steps:
       strQuery: |
         SELECT *,
           SUBSTR(USUBJID, 4, 3) as SITEID,
-          AESTDTC as aest_dt,
-          AEENDTC as aeen_dt,
-          AEDECOD as mdrpt_nsv,
-          AEBODSYS as mdrsoc_nsv,
-          AESER as aeser,
-          AESEV as aetoxgr
+          CASE
+            WHEN LENGTH(AESTDTC) = 10 THEN 
+              CAST(AESTDTC as DATE)
+            ELSE NULL
+          END AS aest_dt,
+          CASE
+            WHEN LENGTH(AEENDTC) = 10 THEN 
+              CAST(AEENDTC as DATE)
+            ELSE NULL
+          END AS aeen_dt
         FROM df
 
