adjust pipeline to include gsm.simaerep

--- a/workflows/1_mappings/dm.yaml
+++ b/workflows/1_mappings/dm.yaml
@@ -26,6 +26,7 @@ steps:
       strQuery: |
         SELECT *,
           CAST(RFSTDTC as date) as firstparticipantdate,
+          CAST(RFENDTC as date) as lastparticipantdate,
           DATEDIFF(
             'day',
             CAST(RFSTDTC as date),
